--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
+    "build": "pnpm run gen-typedoc && docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy": "pnpm run gen-typedoc && docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "gen-typedoc": "typedoc --out ./static/api ./lib/src/index.ts"
   },
   "dependencies": {
     "@docusaurus/core": "3.5.2",
@@ -27,6 +28,8 @@
     "@docusaurus/module-type-aliases": "3.5.2",
     "@docusaurus/tsconfig": "3.5.2",
     "@docusaurus/types": "3.5.2",
+    "typedoc": "^0.26.10",
+    "typedoc-plugin-md": "^0.3.1",
     "typescript": "~5.5.2"
   },
   "browserslist": {
